see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jul-2010 Ian MacLennan
 # [#21299] Typo in page cache controller

04-Jul-2010 Jean-Marie Simonet
 $ [#21304] More user friendly strings for multilanguage aspects
 # [#21245] Global parameters for single contact--Showing Contact list makes links not show. Thanks Elin.
 # [#21273] Incorrect date format being used during INSERTs to Redirect table when 404 occurs. Thanks CY Lee

03-Jul-2010 Jean-Marie Simonet
 # [#20796] Joomla! caches ALL HTML in 1 file. Thanks Klas.
 # [#21285] Missing "State" filter for page Extension Manager: Manage
 $ Correcting some ini/keys
 
02-Jul-2010 Jean-Marie Simonet
 # [#21284] Language sorting by id broken
 # [#20836] Missing icon in Messages toolbar (missing from original patch)
 $ [#21279] COM_USERS_GROUPS_NO_ITEM_SELECTED and others similar message undefined
 $ Adding missing string.
 
02-Jul-2010 Mark Dexter
 # [#20634] Typo from earlier patch.

02-Jul-2010 Andrew Eddie
 # [#21181] Consistent use of authorise vs authorize (Rune Sjøen).

01-Jul-2010 Jean-Marie Simonet
 $ [#21265] Inserting new weblink in backend describes new newsfeeds ordering
 # [#21244] Unable to change "Linked User" to "No User" in Contacts. Thanks Bill.
 # [#21272] Checkall broken for contacts, cache, languages. messages

01-Jul-2010 Andrew Eddie
 # [#21056] Trashing module leaves an erroneous entry in module position dropdown lists

01-Jul-2010 Christophe Demko
 # [#21254] Different markup in modal and non-modal menu assignment dialog + Correcting the misplaced <h3> tag
 # [#21249] Module menu assignments in modal checkmark boxes