@@ -1099,7 +1099,7 @@ DATE_FORMAT_LC="l, d F Y"
 DATE_FORMAT_LC1="l, d F Y"
 DATE_FORMAT_LC2="l, d F Y H:i"
 DATE_FORMAT_LC3="d F Y"
-DATE_FORMAT_LC4="d.m.y"
+DATE_FORMAT_LC4="Y-m-d"
 DATE_FORMAT_JS1="y-m-d"
 
 ; Months
