@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+05-Jul-2010 Jean-Marie Simonet
+#$ [#21307] * Customising date format missing
+# Wrong class for date fields in redirect xml
+
 05-Jul-2010 Ian MacLennan
  # [#21299] Typo in page cache controller
 
